@@ -1,0 +1,22 @@
+# dmidecode 3.1
+Getting SMBIOS data from Apple SMBIOS service.
+SMBIOS 3.0 present.
+
+# At least 2 different entry types are required for getDmidecodeInfos()
+Handle 0x0001, DMI type 0, 24 bytes
+BIOS Information
+    Vendor: unknown
+
+Handle 0x0014, DMI type 22, 26 bytes
+Portable Battery
+	Location: Not Specified
+	Manufacturer: Not Specified
+	Name: Not Specified
+	Design Capacity: Unknown
+	Design Voltage: Unknown
+	SBDS Version: Not Specified
+	Maximum Error: 0%
+	SBDS Serial Number: 0000
+	SBDS Manufacture Date: 1980-00-00
+	SBDS Chemistry: Not Specified
+	OEM-specific Information: 0x00000000
